algo hay cambiado

--- a/en/superior.html
+++ b/en/superior.html
@@ -80,10 +80,10 @@ window.onclick = function(event) {
         </div> 
     </header>
     <div class="botones_subjects">
-        <button onclick="TSMR1()"><h1>DAW</h1></button>
-        <button onclick="TSMR2()"><h1>DAM</h1></button>
-        <button onclick="TSMR2()"><h1>ASIR</h1></button>
-        <button onclick="TSMR2()"><h1>Videojuegos</h1></button>
+        <button onclick="DAW()"><h1>DAW</h1></button>
+        <button onclick="DAM()"><h1>DAM</h1></button>
+        <button onclick="ASIR()"><h1>ASIR</h1></button>
+        <button onclick="VIDEOJUEGOS()"><h1>Videojuegos</h1></button>
       </div>
       <div class="recordatorio"><h1>Recuerda desactivar los módulos activos, si no lo haces no verás tu información correctamente</h1></div>
         
@@ -135,7 +135,7 @@ window.onclick = function(event) {
   
   
   
-  <footer>
+  <footer id="foot">
     <div class="container_footer">
       <div class="izq_footer">
         <div class="espacio_footer"></div>
