--- a/es/index.html
+++ b/es/index.html
@@ -125,7 +125,7 @@ window.onclick = function(event) {
           <!-- nose -->
           <div class="box box_">
             <div class="div_icono_grid">
-              <a href="#">
+              <a href="./superior.html">
                 <div class="centrado_icono"><img class="icono_grid" src="../icons/education.svg" alt=""></div>
             </div>
             <div class="texto_grid">
@@ -137,7 +137,7 @@ window.onclick = function(event) {
 
           <div class="box box_content">
             <div class="div_icono_grid">
-              <a href="#">
+              <a href="facilities.html">
                 <div class="centrado_icono"><img class="icono_grid" src="../icons/places.svg" alt=""></div>
             </div>
             <div class="texto_grid">
@@ -145,30 +145,6 @@ window.onclick = function(event) {
               <div class="cuerpo_grid"><p>Descubre las comodidades que ofrece Florida y dónde puedes encontrarnos!</p></div>
             </div></a>
           </div>
-
-          <div class="box box_slide_bar1">
-            <div class="div_icono_grid">
-              <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" id="educational" src="../icons/whiteboard.svg" alt=""></div>
-            </div>
-            <div class="texto_grid">
-              <div class="titulo_grid"><h1>Modelo educativo</h1></div>
-              <div class="cuerpo_grid"><p>La educación es fundamental, aquí te explicamos cómo aplicamos la educación en Florida</p></div>
-            </div></a>
-          </div>
-
-
-          <div class="box box_slide_bar2">
-            <div class="div_icono_grid">
-              <a href="#">
-                <div class="centrado_icono"><img class="icono_grid" id="international" src="../icons/international.svg" alt=""></div>
-            </div>
-            <div class="texto_grid">
-              <div class="titulo_grid"><h1> Internacional </h1></div>
-              <div class="cuerpo_grid"><p>Sabes que puedes estudiar en casi todos los países alrededor del mundo? Descubre más aquí.</p></div>
-            </div></a>
-          </div>
-
 
           <div class="box box_footer">
             <div class="div_icono_grid">
