mejorandolo casi-todo, a falta de about us y de facilities todo lo demás funcionando correctamente.

--- a/en/superior.html
+++ b/en/superior.html
@@ -41,8 +41,8 @@ window.onclick = function(event) {
     <header>
     <div id="header">
         <div id="logo_header">
-            <img #logo_principal src="../img/Logo-Florida.png" alt="Logo Florida">
-        </div>
+            <a href="./index.html"><img #logo_principal src="../img/Logo-Florida.png" alt="Logo Florida">
+            </a></div>
         
         <div id="parte_arriba">
                 <nav class="parte_arriba contenedor">
