prueba con Vicent

--- a/val/index.html
+++ b/val/index.html
@@ -39,6 +39,8 @@ window.onclick = function(event) {
             <img #logo_principal src="../img/Logo-Florida.png" alt="Logo Florida">
         </div>
         
+        akjsdnjknas
+
         <div id="parte_arriba">
                 <nav class="parte_arriba contenedor">
                     <a href="./subjects.html">Grau Mitjà</a>
