--- a/val/index.html
+++ b/val/index.html
@@ -39,7 +39,7 @@ window.onclick = function(event) {
             <img #logo_principal src="../img/Logo-Florida.png" alt="Logo Florida">
         </div>
         
-        akjsdnjknas
+        hey
 
         <div id="parte_arriba">
                 <nav class="parte_arriba contenedor">
