Co-authored-by: JUAN MARTIN BARRACHINA ALFONSO <jubaal@floridauniversitaria.es>

--- a/en/facilities.html
+++ b/en/facilities.html
@@ -98,8 +98,8 @@ if(btns){
 
 		<div class="cafeteria ">
 			<div class="facility">
-				<div class="titulo_grid_fac"><h1>Cafeteria</h1></div>
-				<div class="cuerpo_grid_fac"><p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis molestiae placeat nisi! Fugit deserunt fuga dolores doloremque assumenda praesentium velit voluptatibus aperiam mollitia fugiat ad natus, placeat dolor, dignissimos quia!
+				<div class="titulo_grid_fac"><h1>Café</h1></div>
+				<div class="cuerpo_grid_fac"><p> The Florida Café is very spacious with tables and a counter to place orders. It offers a wide variety of food and drinks to meet your needs. It's an ideal place to enjoy a break and relax with friends or alone while having something to drink.
 				</p></div>
 			</div>
 		</div>
@@ -108,8 +108,8 @@ if(btns){
 
 		<div class="biblioteca">
 			<div class="facility">
-				<div class="titulo_grid_fac"><h1>Biblioteca</h1></div>
-				<div class="cuerpo_grid_fac"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis molestiae placeat nisi! Fugit deserunt fuga dolores doloremque assumenda praesentium velit voluptatibus aperiam mollitia fugiat ad natus, placeat dolor, dignissimos quia!
+				<div class="titulo_grid_fac"><h1>Library</h1></div>
+				<div class="cuerpo_grid_fac"><p> The Florida Library offers soundproof booths for students and professionals seeking a quiet and distraction-free work environment. These booths are designed to provide a private and comfortable space for study and concentration, allowing users to focus on their tasks without being disturbed by external noise.
 				</p></div>
 			</div>
 		</div>
@@ -118,8 +118,12 @@ if(btns){
 
 		<div class="pabellon">
 			<div class=" facility">
-				<div class="titulo_grid_fac"><h1>Pabellón Florida</h1></div>
-				<div class="cuerpo_grid_fac"><p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis molestiae placeat nisi! Fugit deserunt fuga dolores doloremque assumenda praesentium velit voluptatibus aperiam mollitia fugiat ad natus, placeat dolor, dignissimos quia!
+				<div class="titulo_grid_fac"><h1>Florida Pavilion</h1></div>
+				<div class="cuerpo_grid_fac"><p> The Florida Pavilion is a sports complex specializing in indoor soccer and physical training. With a spacious and well-equipped space, it allows players to practice and compete in indoor soccer games in a safe and suitable environment. It is an ideal place for those who enjoy sports and want to improve their skills and physical health.
+
+
+
+
 				</p></div>
 			</div>
 		</div>
@@ -128,8 +132,12 @@ if(btns){
 
 		<div class="parquesito">
 			<div class=" facility">
-				<div class="titulo_grid_fac"><h1>El parque</h1></div>
-				<div class="cuerpo_grid_fac"><p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis molestiae placeat nisi! Fugit deserunt fuga dolores doloremque assumenda praesentium velit voluptatibus aperiam mollitia fugiat ad natus, placeat dolor, dignissimos quia!
+				<div class="titulo_grid_fac"><h1>The Park</h1></div>
+				<div class="cuerpo_grid_fac"><p> The park is a green space located next to Florida. It offers trails, picnic areas, children's playgrounds, sports fields, and beautiful gardens. It is a perfect place to enjoy outdoor activities and relax in nature.
+
+
+
+
 				</p></div>
 			</div>
 		</div>
