--- a/en/subjects.html
+++ b/en/subjects.html
@@ -96,8 +96,8 @@ if(btns){
     </header>
 
     <div class="botones_subjects">
-      <button onclick="TSMR1()"><h1>Click to see/hide the 1st TSMR subjects</h1></button>
-      <button onclick="TSMR2()"><h1>Click to see/hide the 2nd TSMR subjects</h1></button>
+      <button onclick="TSMR1()"><h1>1st TSMR subjects</h1></button>
+      <button onclick="TSMR2()"><h1>2nd TSMR subjects</h1></button>
       
     </div>
       
