--- a/es/subjects.html
+++ b/es/subjects.html
@@ -95,8 +95,8 @@ if(btns){
     </header>
 
     <div class="botones_subjects">
-      <button onclick="TSMR1()"><h1>Click para ver/ocultar las asignaturas de 1ero de TSMR</h1></button>
-      <button onclick="TSMR2()"><h1>Click para ver/ocultar las asignaturas de 2do de TSMR</h1></button>
+      <button onclick="TSMR1()"><h1>Asignaturas de 1ero de TSMR</h1></button>
+      <button onclick="TSMR2()"><h1>Asignaturas de 2do de TSMR</h1></button>
       
     </div>
       
