About us en inglés 70% ready, falta acabar de redimensionarlo....

--- a/en/about.html
+++ b/en/about.html
@@ -100,9 +100,42 @@ if(btns){
     </div>
 <div class="grupo_container">
     <div class="grupo">
-        <div class="sergio">serg</div>
-        <div class="rafa">raf</div>
-        <div class="martin">mart</div>
+
+        <div class="name">
+          
+            <div class="imagen_persona_grupo">
+              <img src="../img/fotos_nuestras/prueba.jpg" alt="">
+            </div>
+                <div class="nombre_persona_grupo">
+                  <h1>Sergio Martínez</h1>
+                </div>
+                  <div class="bio_persona_grupo">
+                    p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum eos explicabo optio molestias veritatis fugit eligendi atque minima, impedit repudiandae doloribus, deserunt neque vel quo asperiores unde porro distinctio nobis!</p>
+                    </div>
+        </div>
+        <div class="name1">
+          <div class="imagen_persona_grupo">
+            <img src="../img/fotos_nuestras/prueba.jpg" alt="">
+          </div>
+              <div class="nombre_persona_grupo">
+                <h1>Rafa Navarrete</h1>
+              </div>
+                  <div class="bio_persona_grupo">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum eos explicabo optio molestias veritatis fugit eligendi atque minima, impedit repudiandae doloribus, deserunt neque vel quo asperiores unde porro distinctio nobis!</p>
+                  </div>
+        </div>
+        <div class="name">
+            <div class="imagen_persona_grupo">
+              <img src="../img/fotos_nuestras/prueba.jpg" alt="">
+            </div>
+                <div class="nombre_persona_grupo">
+                  <h1>Martín Barrachina</h1>
+                </div>
+                    <div class="bio_persona_grupo">
+                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum eos explicabo optio molestias veritatis fugit eligendi atque minima, impedit repudiandae doloribus, deserunt neque vel quo asperiores unde porro distinctio nobis!</p>
+                    </div>
+
+        </div>
     </div>
 </div>
     
