--- a/en/about.html
+++ b/en/about.html
@@ -182,17 +182,8 @@ if(btns){
               </div>
             </div>
           </div>
-          <div class="der_footer">
-            <div class="der_vacio">
-              <div class="uv"><img src="../icons/som-cooperativa.png" alt=""></div>
-              <div class="uv"><img src="../icons/uv.svg" alt=""></div>
-              <div class="uv"><img src="../icons/upv-ok.svg" alt=""></div>
-              <div class="uv"><img src="../icons/gv.svg" alt=""></div>
-      
-            </div>
-          </div>
-        </div>
-      </footer>
+          <div class="der_footer">Lo mismo pasa con el grid 2k
+
       
       </body>
       </html>
