--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <link rel="shortcut icon" href="./Logo_la_bona.ico" type="image/png" />
+  <title>La Bona Algemesí</title>
   <style>
   #1{
      height:"auto";
