--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@ width:100%;
 </head>
 <body>
 <div id="foto" >
-<img id="1" src="https://raw.githubusercontent.com/RXVLC/ort/main/ort_1.jpg">
+<img id="1" src="ort_1.jpg">
+</div>
+<div id="foto" >
+<img id="1" src="ort_2.jpg">
+</div>
+<div id="foto" >
+<img id="1" src="ort_3.jpg">
+</div>
+<div id="foto" >
+<img id="1" src="ort_4.jpg">
+</div>
+<div id="foto" >
+<img id="1" src="ort_5.jpg">
 </div>
 </body>
 </html>
