--- a/index.html
+++ b/index.html
@@ -13,25 +13,40 @@
     #foto{
         font-family: Arial, Helvetica, sans-serif;
         height:auto;
-width:100%;
+        width:100%;
     }
+
+    body{
+        background-color: #21211f;
+        
+    }
+@media (min-width: 768px) {
+    body div{
+        display: flex;
+        justify-content: center;
+    }
+}
+    
 </style>
 </head>
 <body>
 <div id="foto" >
-<img id="1" src="ort_1.jpg">
+<img id="1" src="1.jpg">
 </div>
 <div id="foto" >
-<img id="1" src="ort_2.jpg">
+<img id="1" src="2.jpg">
 </div>
 <div id="foto" >
-<img id="1" src="ort_3.jpg">
+<img id="1" src="3.jpg">
 </div>
 <div id="foto" >
-<img id="1" src="ort_4.jpg">
+<img id="1" src="4.jpg">
 </div>
 <div id="foto" >
-<img id="1" src="ort_5.jpg">
+<img id="1" src="5.jpg">
 </div>
+<div id="foto" >
+    <img id="1" src="6.jpg">
+    </div>
 </body>
 </html>
