--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         
     }
 
+    @media (min-width: 768px) {
     body div{
         display: flex;
         justify-content: center;
     }
+}
 
     
 </style>
